cloudformation/balancer.yml
---
AWSTemplateFormatVersion: '2010-09-09'
Description: 'AWS Application Load Balancer'

Metadata:

  AWS::CloudFormation::Interface:
    ParameterGroups:
      - Label:
          default: 'General configuration'
        Parameters:
          - 'BaseName'
          - 'Environment'
          - 'Certificate'
      - Label:
          default: 'Network configuration'
        Parameters:
          - 'VpcId'
          - 'Subnets'
      - Label:
          default: 'SSM configuration'
        Parameters:
          - 'SsmKeyPrefix'
    ParameterLabels:
      BaseName:
        default: 'Base resource name'
      Environment:
        default: 'Environment'
      Certificate:
        default: 'TLS Certificate'
      VpcId:
        default: 'VPC Identifier'
      Subnets:
        default: 'VPC Subnets'
      SsmKeyPrefix:
        default: 'Key prefix'

Parameters:

  BaseName:
    Description: 'This name will be used to build identifiers for the components in the stack'
    Type: 'String'
    AllowedPattern: '[-_a-z0-9]+'
    ConstraintDescription: 'Invalid name. Only lowercase letters, numbers, underscores and hyphens are allowed.'
    Default: 'alb'

  Environment:
    Description: 'Stack environment name'
    Type: 'String'
    AllowedValues:
      - 'Pro'
      - 'Pre'
    Default: 'Pro'

  Certificate:
    Description: 'AWS SSM Parameter name storing the TLS certificate ARN (certificate must be stored in ACM in the same region as the load balancer)'
    Type: 'AWS::SSM::Parameter::Value<String>'
    Default: '/balancer/certificate'

  VpcId:
    Description: 'AWS SSM Parameter name storing the VPC identifier'
    Type: 'AWS::SSM::Parameter::Value<AWS::EC2::VPC::Id>'
    Default: '/network/vpc-id'

  Subnets:
    Description: 'AWS SSM Parameter name storing subnets for load balancer'
    Type: 'AWS::SSM::Parameter::Value<List<AWS::EC2::Subnet::Id>>'
    Default: '/network/subnets'

  SsmKeyPrefix:
    Description: 'Key prefix for AWS Systems Manager Parameters created in this stack'
    Type: 'String'
    Default: '/balancer'

Resources:

  LoadBalancer:
    Type: 'AWS::ElasticLoadBalancingV2::LoadBalancer'
    Properties:
      Name: !Ref 'BaseName'
      Type: 'application'
      Subnets: !Ref 'Subnets'
      SecurityGroups:
        - !Ref 'SecurityGroup'
      LoadBalancerAttributes:
        - Key: 'deletion_protection.enabled'
          Value: 'true'
        - Key: 'routing.http2.enabled'
          Value: 'false'
      Tags:
        - Key: 'Name'
          Value: !Ref 'BaseName'
        - Key: 'Env'
          Value: !Ref 'Environment'

  ListenerHttp:
    Type: 'AWS::ElasticLoadBalancingV2::Listener'
    Properties:
      LoadBalancerArn: !Ref 'LoadBalancer'
      Port: 80
      Protocol: 'HTTP'
      DefaultActions:
        - Type: 'forward'
          TargetGroupArn: !Ref 'DefaultTargetGroup'

  ListenerHttps:
    Type: 'AWS::ElasticLoadBalancingV2::Listener'
    Properties:
      LoadBalancerArn: !Ref 'LoadBalancer'
      Port: 443
      Protocol: 'HTTPS'
      Certificates:
        - CertificateArn: !Ref 'Certificate'
      DefaultActions:
        - Type: 'forward'
          TargetGroupArn: !Ref 'DefaultTargetGroup'

  DefaultTargetGroup:
    Type: 'AWS::ElasticLoadBalancingV2::TargetGroup'
    Properties:
      Name: !Sub '${BaseName}-default'
      Port: 80
      Protocol: 'HTTP'
      VpcId: !Ref 'VpcId'
      Tags:
        - Key: 'Name'
          Value: !Sub '${BaseName}-default'
        - Key: 'Env'
          Value: !Ref 'Environment'

  SecurityGroup:
    Type: 'AWS::EC2::SecurityGroup'
    Properties:
      GroupDescription: 'Enable access to load balancer'
      VpcId: !Ref 'VpcId'
      SecurityGroupIngress:
        - IpProtocol: 'tcp'
          FromPort: 80
          ToPort: 80
          CidrIp: '0.0.0.0/0'
        - IpProtocol: 'tcp'
          FromPort: 443
          ToPort: 443
          CidrIp: '0.0.0.0/0'
      Tags:
        - Key: 'Name'
          Value: !Sub '${BaseName}-lb'
        - Key: 'Env'
          Value: !Ref 'Environment'

  SsmDnsEndpoint:
    Type: AWS::SSM::Parameter
    Properties:
      Name: !Sub '${SsmKeyPrefix}/dns-endpoint'
      Type: String
      Value: !GetAtt 'LoadBalancer.DNSName'
      Description: !Sub '${AWS::StackName} - Load Balancer DNS endpoint'
      Tags:
        Name: !Sub '${BaseName}-dnsendpoint'
        Env: !Ref 'Environment'

  SsmHostedZoneId:
    Type: AWS::SSM::Parameter
    Properties:
      Name: !Sub '${SsmKeyPrefix}/hostedzone-id'
      Type: String
      Value: !GetAtt 'LoadBalancer.CanonicalHostedZoneID'
      Description: !Sub '${AWS::StackName} - Load Balancer Route53 HostedZone identifier'
      Tags:
        Name: !Sub '${BaseName}-hostedzoneid'
        Env: !Ref 'Environment'

  SsmListenerHttpArn:
    Type: AWS::SSM::Parameter
    Properties:
      Name: !Sub '${SsmKeyPrefix}/listenerhttp-arn'
      Type: String
      Value: !Ref 'ListenerHttp'
      Description: !Sub '${AWS::StackName} - Load Balancer HTTP listener ARN'
      Tags:
        Name: !Sub '${BaseName}-listenerhttparn'
        Env: !Ref 'Environment'

  SsmListenerHttpsArn:
    Type: AWS::SSM::Parameter
    Properties:
      Name: !Sub '${SsmKeyPrefix}/listenerhttps-arn'
      Type: String
      Value: !Ref 'ListenerHttps'
      Description: !Sub '${AWS::StackName} - Load Balancer HTTPS listener ARN'
      Tags:
        Name: !Sub '${BaseName}-listenerhttpsarn'
        Env: !Ref 'Environment'

  SsmSecurityGroup:
    Type: AWS::SSM::Parameter
    Properties:
      Name: !Sub '${SsmKeyPrefix}/security-group'
      Type: String
      Value: !Ref 'SecurityGroup'
      Description: !Sub '${AWS::StackName} - Security group'
      Tags:
        Name: !Sub '${BaseName}-securitygroup'
        Env: !Ref 'Environment'

Outputs:

  DnsEndpoint:
    Description: 'Load balancer DNS endpoint'
    Value: !GetAtt 'LoadBalancer.DNSName'
    Export:
      Name: !Sub '${AWS::StackName}-DnsEndpoint'

  HostedZoneId:
    Description: 'Load balancer Route53 HostedZone identifier'
    Value: !GetAtt 'LoadBalancer.CanonicalHostedZoneID'
    Export:
      Name: !Sub '${AWS::StackName}-HostedZoneId'

  ListenerHttpArn:
    Description: 'Load balancer HTTP listener ARN'
    Value: !Ref 'ListenerHttp'
    Export:
      Name: !Sub '${AWS::StackName}-ListenerHttpArn'

  ListenerHttpsArn:
    Description: 'Load balancer HTTPS listener ARN'
    Value: !Ref 'ListenerHttps'
    Export:
      Name: !Sub '${AWS::StackName}-ListenerHttpsArn'

  LoadBalancerSG:
    Description: 'Security group for load balancer'
    Value: !Ref 'SecurityGroup'
    Export:
      Name: !Sub '${AWS::StackName}-SecurityGroup'
